tests/snapshots/type_error_suggestion.expected
-- NAME ERROR ----------------------------------------------

test.gn:1:14

I cannot find a variable named `prnt`.

Did you mean print?

1 | let result = prnt 42
                 ^^^^
